--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "backend": "nodemon backend/index.js",
     "frontend": "npm run dev --prefix frontend",
-    "dev": "concurrently \"npm run frontend\" \"npm run backend\""
+    "dev": "concurrently \"npm run frontend\" \"npm run backend\"",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -31,5 +32,13 @@
     "mongoose": "^8.4.4",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.25.7",
+    "@babel/preset-env": "^7.25.7",
+    "@types/supertest": "^6.0.2",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
   }
 }
