--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "@mui/icons-material": "^6.1.2",
     "@mui/material": "^6.1.2",
     "axios": "^1.7.7",
+    "lucide": "^0.453.0",
+    "lucide-react": "^0.453.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0",
