--- a/cleanPathCollectorApp/package.json
+++ b/cleanPathCollectorApp/package.json
@@ -17,7 +17,10 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
+    "@shopify/react-native-skia": "1.2.3",
+    "axios": "^1.7.7",
     "expo": "~51.0.28",
+    "expo-camera": "~15.0.16",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
