--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jspdf-autotable": "^3.8.3",
     "leaflet": "^1.9.4",
     "leaflet-color-markers": "^0.1.0",
+    "lucide-react": "^0.453.0",
     "mongoose": "^8.4.4",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4"
